--- a/store.html
+++ b/store.html
@@ -1,1 +1,80 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Basketball Apparel Store</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      margin: 0;
+      padding: 20px;
+      background-color: #f7f7f7;
+    }
+    .header {
+      text-align: center;
+      margin-bottom: 20px;
+    }
+    .product {
+      display: flex;
+      margin-bottom: 30px;
+      padding: 10px;
+      border: 1px solid #ccc;
+      border-radius: 5px;
+      background-color: #fff;
+    }
+    .product-image {
+      flex: 1;
+      max-width: 200px;
+      margin-right: 20px;
+    }
+    .product-details {
+      flex: 2;
+    }
+    .product-title {
+      font-size: 20px;
+      margin-bottom: 10px;
+    }
+    .product-price {
+      font-size: 18px;
+      color: #e74c3c;
+      margin-bottom: 10px;
+    }
+    .product-description {
+      font-size: 14px;
+    }
+  </style>
+</head>
+<body>
+  <div class="header">
+    <h1>Basketball Apparel Store</h1>
+  </div>
 
+  <div class="product">
+    <div class="product-image">
+      <img src="https://via.placeholder.com/200" alt="Basketball Jersey">
+    </div>
+    <div class="product-details">
+      <h2 class="product-title">Basketball Jersey</h2>
+      <p class="product-price">$39.99</p>
+      <p class="product-description">High-quality basketball jersey designed for performance and style on the court.</p>
+      <button>Add to Cart</button>
+    </div>
+  </div>
+
+  <div class="product">
+    <div class="product-image">
+      <img src="https://via.placeholder.com/200" alt="Basketball Shoes">
+    </div>
+    <div class="product-details">
+      <h2 class="product-title">Basketball Shoes</h2>
+      <p class="product-price">$89.99</p>
+      <p class="product-description">Premium basketball shoes with advanced cushioning and traction for optimal performance.</p>
+      <button>Add to Cart</button>
+    </div>
+  </div>
+
+  <!-- Add more products here -->
+
+</body>
+</html>
