--- a/store.html
+++ b/store.html
@@ -5,44 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Basketball Apparel Store</title>
   <style>
-    body {
-      font-family: Arial, sans-serif;
-      margin: 0;
-      padding: 20px;
-      background-color: #f7f7f7;
-    }
-    .header {
-      text-align: center;
-      margin-bottom: 20px;
-    }
-    .product {
-      display: flex;
-      margin-bottom: 30px;
-      padding: 10px;
-      border: 1px solid #ccc;
-      border-radius: 5px;
-      background-color: #fff;
-    }
-    .product-image {
-      flex: 1;
-      max-width: 200px;
-      margin-right: 20px;
-    }
-    .product-details {
-      flex: 2;
-    }
-    .product-title {
-      font-size: 20px;
-      margin-bottom: 10px;
-    }
-    .product-price {
-      font-size: 18px;
-      color: #e74c3c;
-      margin-bottom: 10px;
-    }
-    .product-description {
-      font-size: 14px;
-    }
+    /* ... (previous styles) ... */
   </style>
 </head>
 <body>
@@ -52,7 +15,7 @@
 
   <div class="product">
     <div class="product-image">
-      <img src="https://via.placeholder.com/200" alt="Basketball Jersey">
+      <img src="https://encrypted-tbn3.gstatic.com/shopping?q=tbn:ANd9GcTBz5lDZtceLetdS2sV5yoV6fU_PMP6IUcgmnOrL3mht7H-SQls8Ezo6uzjsfRL2K-hidvUuOMiVINbkss05IcyJQuLoszYE_1I1eNJIlqOUp7_2ObTox-pVsw&usqp=CAc" alt="Basketball Jersey">
     </div>
     <div class="product-details">
       <h2 class="product-title">Basketball Jersey</h2>
@@ -64,12 +27,12 @@
 
   <div class="product">
     <div class="product-image">
-      <img src="https://via.placeholder.com/200" alt="Basketball Shoes">
+      <img src="https://encrypted-tbn2.gstatic.com/shopping?q=tbn:ANd9GcRLO1s3DNhaPcPR9BG8sGzo0Kv_a27q_NJ4GF9B6MPfP5sKvBagBUiq5BhA7fdmAK_Owgs_DTzBg4y6JYm6yuHrF0tpMPacd7L3gp2aBHyHp9qnouPWtq6gRg&usqp=CAc" alt="Basketball">
     </div>
     <div class="product-details">
-      <h2 class="product-title">Basketball Shoes</h2>
-      <p class="product-price">$89.99</p>
-      <p class="product-description">Premium basketball shoes with advanced cushioning and traction for optimal performance.</p>
+      <h2 class="product-title">Basketball</h2>
+      <p class="product-price">$19.99</p>
+      <p class="product-description">Official basketball with superior grip and durability for optimal performance on the court.</p>
       <button>Add to Cart</button>
     </div>
   </div>
