--- a/store.html
+++ b/store.html
@@ -5,7 +5,58 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Basketball Apparel Store</title>
   <style>
-    /* ... (previous styles) ... */
+    body {
+      font-family: Arial, sans-serif;
+      margin: 0;
+      padding: 20px;
+      background-color: #f2f2f2;
+    }
+    .header {
+      text-align: center;
+      margin-bottom: 20px;
+    }
+    .product {
+      display: flex;
+      background-color: #fff;
+      margin-bottom: 30px;
+      padding: 10px;
+      border: 1px solid #ddd;
+      border-radius: 5px;
+    }
+    .product-image {
+      flex: 1;
+      max-width: 200px;
+      margin-right: 20px;
+    }
+    .product-details {
+      flex: 2;
+    }
+    .product-title {
+      font-size: 20px;
+      margin-bottom: 10px;
+      color: #e74c3c; /* Red Color */
+    }
+    .product-price {
+      font-size: 18px;
+      color: #3498db; /* Blue Color */
+      margin-bottom: 10px;
+    }
+    .product-description {
+      font-size: 14px;
+      color: #444;
+    }
+    button {
+      background-color: #3498db; /* Blue Color */
+      color: #fff;
+      border: none;
+      padding: 8px 12px;
+      border-radius: 3px;
+      cursor: pointer;
+      transition: background-color 0.3s;
+    }
+    button:hover {
+      background-color: #2980b9; /* Darker Blue Color on Hover */
+    }
   </style>
 </head>
 <body>
