--- a/store.html
+++ b/store.html
@@ -8,45 +8,51 @@
     body {
       font-family: Arial, sans-serif;
       margin: 0;
-      padding: 20px;
+      padding: 0;
       background-color: #f2f2f2;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      min-height: 100vh;
     }
-    .header {
+    .container {
+      background-color: #fff;
+      border-radius: 10px;
+      box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+      max-width: 500px;
+      padding: 20px;
       text-align: center;
-      margin-bottom: 20px;
     }
     .product {
       display: flex;
-      background-color: #fff;
-      margin-bottom: 30px;
-      padding: 10px;
-      border: 1px solid #ddd;
-      border-radius: 5px;
+      align-items: center;
+      margin-bottom: 20px;
     }
     .product-image {
       flex: 1;
-      max-width: 200px;
-      margin-right: 20px;
+      max-width: 80px;
+      margin-right: 15px;
     }
     .product-details {
       flex: 2;
+      text-align: left;
     }
     .product-title {
-      font-size: 20px;
-      margin-bottom: 10px;
-      color: #e74c3c; /* Red Color */
+      font-size: 18px;
+      margin-bottom: 5px;
+      color: #e74c3c;
     }
     .product-price {
-      font-size: 18px;
-      color: #3498db; /* Blue Color */
-      margin-bottom: 10px;
+      font-size: 16px;
+      color: #3498db;
     }
     .product-description {
       font-size: 14px;
-      color: #444;
+      margin-top: 5px;
+      color: #555;
     }
     button {
-      background-color: #3498db; /* Blue Color */
+      background-color: #3498db;
       color: #fff;
       border: none;
       padding: 8px 12px;
@@ -55,40 +61,42 @@
       transition: background-color 0.3s;
     }
     button:hover {
-      background-color: #2980b9; /* Darker Blue Color on Hover */
+      background-color: #2980b9;
     }
   </style>
 </head>
 <body>
-  <div class="header">
-    <h1>Basketball Apparel Store</h1>
+  <div class="container">
+    <div class="header">
+      <h1>Basketball Apparel Store</h1>
+    </div>
+
+    <div class="product">
+      <div class="product-image">
+        <img src="https://encrypted-tbn3.gstatic.com/shopping?q=tbn:ANd9GcTBz5lDZtceLetdS2sV5yoV6fU_PMP6IUcgmnOrL3mht7H-SQls8Ezo6uzjsfRL2K-hidvUuOMiVINbkss05IcyJQuLoszYE_1I1eNJIlqOUp7_2ObTox-pVsw&usqp=CAc" alt="Basketball Jersey">
+      </div>
+      <div class="product-details">
+        <h2 class="product-title">Basketball Jersey</h2>
+        <p class="product-price">$39.99</p>
+        <p class="product-description">High-quality basketball jersey designed for performance and style on the court.</p>
+        <button>Add to Cart</button>
+      </div>
+    </div>
+
+    <div class="product">
+      <div class="product-image">
+        <img src="https://encrypted-tbn2.gstatic.com/shopping?q=tbn:ANd9GcRLO1s3DNhaPcPR9BG8sGzo0Kv_a27q_NJ4GF9B6MPfP5sKvBagBUiq5BhA7fdmAK_Owgs_DTzBg4y6JYm6yuHrF0tpMPacd7L3gp2aBHyHp9qnouPWtq6gRg&usqp=CAc" alt="Basketball">
+      </div>
+      <div class="product-details">
+        <h2 class="product-title">Basketball</h2>
+        <p class="product-price">$19.99</p>
+        <p class="product-description">Official basketball with superior grip and durability for optimal performance on the court.</p>
+        <button>Add to Cart</button>
+      </div>
+    </div>
+
+    <!-- Add more products here -->
+
   </div>
-
-  <div class="product">
-    <div class="product-image">
-      <img src="https://encrypted-tbn3.gstatic.com/shopping?q=tbn:ANd9GcTBz5lDZtceLetdS2sV5yoV6fU_PMP6IUcgmnOrL3mht7H-SQls8Ezo6uzjsfRL2K-hidvUuOMiVINbkss05IcyJQuLoszYE_1I1eNJIlqOUp7_2ObTox-pVsw&usqp=CAc" alt="Basketball Jersey">
-    </div>
-    <div class="product-details">
-      <h2 class="product-title">Basketball Jersey</h2>
-      <p class="product-price">$39.99</p>
-      <p class="product-description">High-quality basketball jersey designed for performance and style on the court.</p>
-      <button>Add to Cart</button>
-    </div>
-  </div>
-
-  <div class="product">
-    <div class="product-image">
-      <img src="https://encrypted-tbn2.gstatic.com/shopping?q=tbn:ANd9GcRLO1s3DNhaPcPR9BG8sGzo0Kv_a27q_NJ4GF9B6MPfP5sKvBagBUiq5BhA7fdmAK_Owgs_DTzBg4y6JYm6yuHrF0tpMPacd7L3gp2aBHyHp9qnouPWtq6gRg&usqp=CAc" alt="Basketball">
-    </div>
-    <div class="product-details">
-      <h2 class="product-title">Basketball</h2>
-      <p class="product-price">$19.99</p>
-      <p class="product-description">Official basketball with superior grip and durability for optimal performance on the court.</p>
-      <button>Add to Cart</button>
-    </div>
-  </div>
-
-  <!-- Add more products here -->
-
 </body>
 </html>
