--- a/store.html
+++ b/store.html
@@ -1,106 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Basketball Apparel Store</title>
-  <style>
-    body {
-      font-family: 'Helvetica Neue', sans-serif;
-      margin: 0;
-      padding: 0;
-      background-color: #000;
-      color: #fff;
-    }
-    .container {
-      max-width: 800px;
-      margin: 0 auto;
-      padding: 20px;
-    }
-    .header {
-      text-align: center;
-      margin-bottom: 20px;
-    }
-    .description {
-      text-align: center;
-      margin-bottom: 40px;
-    }
-    .product {
-      display: flex;
-      align-items: center;
-      margin-bottom: 20px;
-    }
-    .product-image {
-      flex: 1;
-      max-width: 100px;
-      margin-right: 20px;
-    }
-    .product-details {
-      flex: 2;
-      text-align: left;
-    }
-    .product-title {
-      font-size: 24px;
-      margin-bottom: 5px;
-      color: #e74c3c;
-    }
-    .product-price {
-      font-size: 20px;
-      color: #3498db;
-    }
-    .product-description {
-      font-size: 16px;
-      margin-top: 5px;
-    }
-    button {
-      background-color: #3498db;
-      color: #fff;
-      border: none;
-      padding: 8px 12px;
-      border-radius: 3px;
-      cursor: pointer;
-      transition: background-color 0.3s;
-    }
-    button:hover {
-      background-color: #2980b9;
-    }
-  </style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>NBA Apparel Store</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <div class="container">
-    <div class="header">
-      <h1>Basketball Apparel Store</h1>
-    </div>
-    <div class="description">
-      <p>Welcome to our basketball apparel store! Discover a wide range of high-quality basketball jerseys, shoes, and more to elevate your game on the court.</p>
-    </div>
-
-    <div class="product">
-      <div class="product-image">
-        <img src="https://encrypted-tbn3.gstatic.com/shopping?q=tbn:ANd9GcTBz5lDZtceLetdS2sV5yoV6fU_PMP6IUcgmnOrL3mht7H-SQls8Ezo6uzjsfRL2K-hidvUuOMiVINbkss05IcyJQuLoszYE_1I1eNJIlqOUp7_2ObTox-pVsw&usqp=CAc" alt="Basketball Jersey">
-      </div>
-      <div class="product-details">
-        <h2 class="product-title">Basketball Jersey</h2>
-        <p class="product-price">$39.99</p>
-        <p class="product-description">High-quality basketball jersey designed for performance and style on the court.</p>
-        <button>Add to Cart</button>
-      </div>
-    </div>
-
-    <div class="product">
-      <div class="product-image">
-        <img src="https://encrypted-tbn2.gstatic.com/shopping?q=tbn:ANd9GcRLO1s3DNhaPcPR9BG8sGzo0Kv_a27q_NJ4GF9B6MPfP5sKvBagBUiq5BhA7fdmAK_Owgs_DTzBg4y6JYm6yuHrF0tpMPacd7L3gp2aBHyHp9qnouPWtq6gRg&usqp=CAc" alt="Basketball">
-      </div>
-      <div class="product-details">
-        <h2 class="product-title">Basketball</h2>
-        <p class="product-price">$19.99</p>
-        <p class="product-description">Official basketball with superior grip and durability for optimal performance on the court.</p>
-        <button>Add to Cart</button>
-      </div>
-    </div>
-
-    <!-- Add more products here -->
-
-  </div>
+    <header>
+        <h1>NBA Apparel Store</h1>
+    </header>
+    <nav>
+        <!-- Navigation links here -->
+    </nav>
+    <main>
+        <section class="product">
+            <img src="image_url_1.jpg" alt="Product 1">
+            <h2>Product Name 1</h2>
+            <p>Description of Product 1.</p>
+            <span class="price">$XX.XX</span>
+            <button>Add to Cart</button>
+        </section>
+        <section class="product">
+            <img src="image_url_2.jpg" alt="Product 2">
+            <h2>Product Name 2</h2>
+            <p>Description of Product 2.</p>
+            <span class="price">$XX.XX</span>
+            <button>Add to Cart</button>
+        </section>
+        <!-- Add more product sections as needed -->
+    </main>
+    <footer>
+        <p>&copy; 2023 NBA Apparel Store. All rights reserved.</p>
+    </footer>
 </body>
 </html>
