--- a/store.html
+++ b/store.html
@@ -15,17 +15,24 @@
     </nav>
     <main>
         <section class="product">
-            <img src="image_url_1.jpg" alt="Product 1">
-            <h2>Product Name 1</h2>
-            <p>Description of Product 1.</p>
-            <span class="price">$XX.XX</span>
+            <img src="jersey1.jpg" alt="Jersey 1">
+            <h2>NBA Team Jersey</h2>
+            <p>Official NBA team jersey with player name and number.</p>
+            <span class="price">$89.99</span>
             <button>Add to Cart</button>
         </section>
         <section class="product">
-            <img src="image_url_2.jpg" alt="Product 2">
-            <h2>Product Name 2</h2>
-            <p>Description of Product 2.</p>
-            <span class="price">$XX.XX</span>
+            <img src="basketball1.jpg" alt="Basketball 1">
+            <h2>NBA Spalding Basketball</h2>
+            <p>Official NBA Spalding basketball for indoor/outdoor play.</p>
+            <span class="price">$29.99</span>
+            <button>Add to Cart</button>
+        </section>
+        <section class="product">
+            <img src="shoes1.jpg" alt="Shoes 1">
+            <h2>Nike LeBron Basketball Shoes</h2>
+            <p>Signature LeBron James basketball shoes with responsive cushioning.</p>
+            <span class="price">$149.99</span>
             <button>Add to Cart</button>
         </section>
         <!-- Add more product sections as needed -->
