--- a/store.html
+++ b/store.html
@@ -3,15 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>NBA Apparel Store</title>
+    <title>NBA Jersey Store</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
-        <h1>NBA Apparel Store</h1>
+        <h1>NBA Jersey Store</h1>
     </header>
     <nav>
-        <!-- Navigation links here -->
+        <ul>
+            <li><a href="#">Home</a></li>
+            <li><a href="#">Jerseys</a></li>
+            <li><a href="#">About Us</a></li>
+            <li><a href="#">Contact</a></li>
+        </ul>
     </nav>
     <main>
         <section class="product">
@@ -22,23 +27,16 @@
             <button>Add to Cart</button>
         </section>
         <section class="product">
-            <img src="basketball1.jpg" alt="Basketball 1">
-            <h2>NBA Spalding Basketball</h2>
-            <p>Official NBA Spalding basketball for indoor/outdoor play.</p>
-            <span class="price">$29.99</span>
+            <img src="jersey2.jpg" alt="Jersey 2">
+            <h2>NBA City Edition Jersey</h2>
+            <p>City-themed NBA jersey featuring unique design elements.</p>
+            <span class="price">$99.99</span>
             <button>Add to Cart</button>
         </section>
-        <section class="product">
-            <img src="shoes1.jpg" alt="Shoes 1">
-            <h2>Nike LeBron Basketball Shoes</h2>
-            <p>Signature LeBron James basketball shoes with responsive cushioning.</p>
-            <span class="price">$149.99</span>
-            <button>Add to Cart</button>
-        </section>
-        <!-- Add more product sections as needed -->
+        <!-- Add more jersey product sections as needed -->
     </main>
     <footer>
-        <p>&copy; 2023 NBA Apparel Store. All rights reserved.</p>
+        <p>&copy; 2023 NBA Jersey Store. All rights reserved.</p>
     </footer>
 </body>
 </html>
