--- a/store.html
+++ b/store.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Basketball Store</title>
+  <img src="https://example.com/path/to/your-image.jpg" alt="Your Image">
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -43,7 +44,7 @@
 </head>
 <body>
   <header>
-    <h1>Welcome to our Basketball Store</h1>
+    <h1>Welcome to Yew Kit's Basketball Store</h1>
   </header>
   <nav>
     <a href="#shoes">Shoes</a> |
