--- a/store.html
+++ b/store.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>JioMeNow - Dating App</title>
+    <title>Kit's ShoeStore</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -11,7 +11,7 @@
             padding: 0;
         }
         header {
-            background-color: #f8f8f8;
+            background-color: #FE1313;
             padding: 10px;
             text-align: center;
         }
@@ -32,7 +32,7 @@
             text-align: center;
         }
         footer {
-            background-color: #333;
+            background-color: #0B33FE;
             color: #fff;
             text-align: center;
             padding: 10px;
@@ -64,7 +64,7 @@
         <!-- Add more profiles here -->
     </section>
     <footer>
-        <p>&copy; 2023 JioMeNow Dating App. All rights reserved.</p>
+        <p>&copy; 2023 Kit's Shoe Store. All rights reserved.</p>
     </footer>
 </body>
 </html>
