--- a/store.html
+++ b/store.html
@@ -12,6 +12,13 @@
             padding: 0;
         }
 
+        footer {
+            background-color: #333;
+            color: white;
+            text-align: center;
+            padding: 1rem;
+        }
+
         header {
             background-color: #333;
             color: white;
@@ -73,6 +80,9 @@
             <button>Add to Cart</button>
         </div>
     </main>
+    <footer>
+        <p>&copy; 2023 Kits Shoes. All rights reserved.</p>
+    </footer>
 </body>
 </html>
 
