--- a/store.html
+++ b/store.html
@@ -56,25 +56,25 @@
     </header>
     <main>
         <div class="product-card">
-            <img src="shoe1.jpg" alt="Product 1">
+            <img src="https://encrypted-tbn0.gstatic.com/shopping?q=tbn:ANd9GcRQP6zeaQpdaD2FDzuzfRtuGyvdeUtbLhCyfcn8QR_aO2TShykLMFVQhdJ2fBVIYsTCOsl1lgjRw-Tl2_cZKOZ23TcEre9GucQK6U2eH51rEpP8rOCQPVfzcVWS5WrkfFaZcNYGsBSxnw&usqp=CAc" alt="Product 1">
             <h2>Classic Sneaker</h2>
             <p>Price: $79.99</p>
             <button>Add to Cart</button>
         </div>
         <div class="product-card">
-            <img src="shoe2.jpg" alt="Product 2">
+            <img src="https://encrypted-tbn3.gstatic.com/shopping?q=tbn:ANd9GcSSUI5RGvnMcjXn2Ed1d3OQ5SIfmnLSNupndp-tT8snylhUTp4XOyIZWGHFI4fZds9ZRVxZZrs5uXWmmc_BazAyjUKHbknHXV2jqZLhixPApksZagiMCjIF5dSWoXQ9cbkjFoqR8Q&usqp=CAc" alt="Product 2">
             <h2>Running Shoe</h2>
             <p>Price: $89.99</p>
             <button>Add to Cart</button>
         </div>
         <div class="product-card">
-            <img src="shoe3.jpg" alt="Product 3">
+            <img src="https://encrypted-tbn1.gstatic.com/shopping?q=tbn:ANd9GcTcNetmOzW3b5pJbaBil5UM6QA9QrfOTuI6BRrrALpodxLZJLsDuoB_qNbT9lN3Ur_W9SmE5maFtDAMcBlD_CfXjLAT9NFPMUyxRDmV5kbaAdUDOb4Y7H5zPmZxDKVefw&usqp=CAc" alt="Product 3">
             <h2>Basketball Shoe</h2>
             <p>Price: $109.99</p>
             <button>Add to Cart</button>
         </div>
         <div class="product-card">
-            <img src="shoe4.jpg" alt="Product 4">
+            <img src="https://encrypted-tbn1.gstatic.com/shopping?q=tbn:ANd9GcSFtMDjDXoVzlGESyHZ0iRDyAcpDTwW2MV17FR06pmIN7G_qV4fufl4YCWYL7RfV4zNbow-uOY9FhlmSmxA__exjfQG0I4459wnOuzgtSB98PQdjXEHHK-CQDkHTdNH46og5alLPw&usqp=CAc" alt="Product 4">
             <h2>High-Top Sneaker</h2>
             <p>Price: $99.99</p>
             <button>Add to Cart</button>
