--- a/store.html
+++ b/store.html
@@ -49,6 +49,42 @@
             margin: 0.5rem 0;
         }
     </style>
+
+    <script>
+        // Sample product data
+        const products = [
+            { name: "Classic Sneaker", price: 79.99 },
+            { name: "Running Shoe", price: 89.99 },
+            { name: "Basketball Shoe", price: 109.99 },
+            { name: "High-Top Sneaker", price: 99.99 }
+        ];
+
+        // Initialize shopping cart
+        let cart = [];
+
+        // Function to update the cart and total price
+        function addToCart(productIndex) {
+            cart.push(products[productIndex]);
+            updateCartDisplay();
+        }
+
+        // Function to update the cart display and total price
+        function updateCartDisplay() {
+            const cartContainer = document.querySelector(".cart-container");
+            cartContainer.innerHTML = "";
+
+            let totalPrice = 0;
+            cart.forEach(item => {
+                const cartItem = document.createElement("div");
+                cartItem.textContent = item.name + " - $" + item.price;
+                cartContainer.appendChild(cartItem);
+                totalPrice += item.price;
+            });
+
+            const totalDisplay = document.querySelector(".total-price");
+            totalDisplay.textContent = "Total Price: $" + totalPrice.toFixed(2);
+        }
+    </script>
 </head>
 <body>
     <header>
