--- a/store.html
+++ b/store.html
@@ -119,6 +119,18 @@
     <footer>
         <p>&copy; 2023 Kits Shoes. All rights reserved.</p>
     </footer>
+    <main>
+        <div class="product-list">
+            <!-- Product listing goes here (same as before) -->
+        </div>
+        <div class="cart-container">
+            <h2>Your Cart:</h2>
+            <!-- Shopping cart items go here -->
+        </div>
+        <div class="total-price">
+            Total Price: $0.00
+        </div>
+    </main>
 </body>
 </html>
 
