--- a/store.html
+++ b/store.html
@@ -121,7 +121,12 @@
     </footer>
     <main>
         <div class="product-list">
-            <!-- Product listing goes here (same as before) -->
+            products = [
+            { name: "Classic Sneaker", price: 79.99 },
+            { name: "Running Shoe", price: 89.99 },
+            { name: "Basketball Shoe", price: 109.99 },
+            { name: "High-Top Sneaker", price: 99.99 }
+        ];
         </div>
         <div class="cart-container">
             <h2>Your Cart:</h2>
