--- a/store.html
+++ b/store.html
@@ -24,7 +24,56 @@
             color: white;
             text-align: center;
             padding: 1rem;
+            position: relative;
         }
+
+        header h1 {
+            font-size: 2.5rem;
+            margin: 0;
+            padding: 0;
+            font-weight: bold;
+        }
+
+        header p {
+            font-size: 1.2rem;
+            margin-top: 0.5rem;
+            opacity: 0.8;
+        }
+
+        header img {
+            max-width: 100px;
+            height: auto;
+        }
+
+        header nav {
+            margin-top: 1rem;
+        }
+
+        header nav a {
+            color: white;
+            text-decoration: none;
+            margin: 0 10px;
+            font-size: 1.1rem;
+            transition: color 0.3s ease;
+        }
+
+        header nav a:hover {
+            color: #ff6600; /* Hover color */
+        }
+    </style>
+</head>
+<body>
+    <header>
+        <img src="logo.png" alt="Kits Shoes Logo">
+        <h1>Kits Shoes</h1>
+        <p>Your One-Stop Shoe Shop</p>
+        <nav>
+            <a href="#">Home</a>
+            <a href="#">Products</a>
+            <a href="#">About Us</a>
+            <a href="#">Contact</a>
+        </nav>
+    </header>
 
         main {
             padding: 2rem;
