--- a/store.html
+++ b/store.html
@@ -98,6 +98,13 @@
     .checkout-button:hover {
         background-color: #ff884d; /* Hover color */
     }
+
+    .total-price-display {
+        font-size: 1.5rem;
+        text-align: center;
+        margin-top: 20px;
+        font-weight: bold;
+    }
         
     </style>
 
@@ -196,6 +203,10 @@
     <div class="total-price">
         Total Price: $0.00
     </div>
+
+    <div class="total-price-display">
+    Total Price: $0.00
+</div>
 
     <div class="cart-container">
     <h2>Your Cart:</h2>
