--- a/store.html
+++ b/store.html
@@ -99,7 +99,7 @@
         background-color: #ff884d; /* Hover color */
     }
 
-    .total-price-display {
+    .total-price {
         font-size: 1.5rem;
         text-align: center;
         margin-top: 20px;
@@ -204,10 +204,7 @@
         Total Price: $0.00
     </div>
 
-    <div class="total-price-display">
-    Total Price: $0.00
-</div>
-
+    
     <div class="cart-container">
     <h2>Your Cart:</h2>
     <!-- Shopping cart items go here -->
