--- a/store.html
+++ b/store.html
@@ -105,6 +105,11 @@
         margin-top: 20px;
         font-weight: bold;
     }
+
+    .cart-container {
+        text-align: center; /* Add this to center the button */
+        margin-top: 20px; /* Add some spacing at the top */
+    }
         
     </style>
 
