--- a/index.html
+++ b/index.html
@@ -37,14 +37,14 @@
 <body>
     <div class="header">
         <h1>Yew Kit</h1>
-        <img src="37681A6F-34B5-49F6-9D19-D5930299813B" alt="Your Photo">
+        <img src= "yaokiet.github.io/photo_2022-12-06_21-21-05.jpg" alt="Your Photo">
     </div>
 
     <div class="video-container">
         <iframe
             width="560"
             height="315"
-            src="https://www.youtube.com/watch?v=U06jlgpMtQs&pp=ygUOcnVzc2lhbiBhbnRoZW0%3D"
+            src="https://www.youtube.com/watch?v=U06jlgpMtQs?autoplay=1&mute=1"
             title="Autoplaying Video"
             frameborder="0"
             allowfullscreen
