--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 <body>
     <div class="header">
         <h1>Yew Kit</h1>
-        <img src= "yaokiet.github.io/photo_2022-12-06_21-21-05.jpg" alt="Your Photo">
+        <img src= "photo_2022-12-06_21-21-05.jpg" alt="Your Photo">
     </div>
 
     <div class="video-container">
