--- a/index.html
+++ b/index.html
@@ -32,12 +32,16 @@
             max-width: 600px;
             border: 1px solid #ccc;
         }
+
+        .rounded-image {
+            border-radius: 50%
+        }
     </style>
 </head>
 <body>
     <div class="header">
-        <h1>Yew Kit</h1>
-        <img src= "photo_2022-12-06_21-21-05.jpg height ='200' width = '200' " alt="Your Photo">
+        <h1>Hi! Im Yew Kit</h1>
+        <img src= "photo_2022-12-06_21-21-05.jpg" height ='200' width = '200' alt="Your Photo">
     </div>
 
     <div class="video-container">
