--- a/index.html
+++ b/index.html
@@ -41,7 +41,12 @@
 <body>
     <div class="header">
         <h1>Hi! Im Yew Kit</h1>
-        <img src= "photo_2022-12-06_21-21-05.jpg" height ='200' width = '200' alt="Your Photo">
+        <img src= "photo_2022-12-06_21-21-05.jpg" class="rounded-image" height ='200' width = '200' alt="Your Photo">
+    </div>
+
+    <div class="bio-box">
+        <h2>About Me</h2>
+        <p>Hello! Im Yew Kit, I love playing games and hanging out with friends, i have aspirations to conquer the world and take over every single living creature on earth ( and maybe even beyond ) Join me on my journey and get to know me! </p>
     </div>
 
     <div class="video-container">
@@ -53,11 +58,6 @@
             frameborder="0"
             allowfullscreen
         ></iframe>
-    </div>
-
-    <div class="bio-box">
-        <h2>About Me</h2>
-        <p>Hello! Im Yew Kit, I love playing games and hanging out with friends, i have aspirations to conquer the world and take over every single living creature on earth ( and maybe even beyond ) Join me on my journey and get to know me! </p>
     </div>
 </body>
 </html>
