--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         .header {
             text-align: center;
             padding: 20px;
-            background-color: #333;
+            background-image: url(): #333;
             color: #fff;
         }
         .video-container {
