--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         .header {
             text-align: center;
             padding: 20px;
-            background-image: url(): #333;
+            background-image: url('photo-1601314167099-232775b3d6fd.avif');
             color: #fff;
         }
         .video-container {
