--- a/bts_folder/home.html
+++ b/bts_folder/home.html
@@ -95,28 +95,28 @@
         </div>
         <div class="carousel-inner rounded">
           <div class="carousel-item active">
-            <img src="/bts_group1.jpeg" class="d-block w-100 h-100" alt="...">
+            <img src="bts_group1.jpeg" class="d-block w-100 h-100" alt="...">
             <div class="carousel-caption d-none d-md-block">
               <h5>I</h5>
               <p>BTS members posing for fashion photoshoot</p>
             </div>
           </div>
           <div class="carousel-item rounded">
-            <img src="/bts_group2.jpeg" class="d-block w-100 h-100" alt="...">
+            <img src="bts_group2.jpeg" class="d-block w-100 h-100" alt="...">
             <div class="carousel-caption d-none d-md-block">
               <h5>Love</h5>
               <p>BTS members hanging out in Seoul after a long concert season is over</p>
             </div>
           </div>
           <div class="carousel-item rounded">
-            <img src="/bts_group3.jpeg" class="d-block w-100 h-100" alt="...">
+            <img src="bts_group3.jpeg" class="d-block w-100 h-100" alt="...">
             <div class="carousel-caption d-none d-md-block">
               <h5>Bangtan</h5>
               <p>BTS members showing off new hair styles</p>
             </div>
           </div>
           <div class="carousel-item rounded">
-            <img src="/bts_group4.jpeg" class="d-block w-100 h-100" alt="...">
+            <img src="bts_group4.jpeg" class="d-block w-100 h-100" alt="...">
             <div class="carousel-caption d-none d-md-block">
               <h5>Very Much</h5>
               <p>BTS members posing in their bedroom</p>
@@ -145,7 +145,7 @@
 
 
   <div class="card" style="width: 18rem;">
-    <img src="/bts_group2.jpeg" class="card-img-top" alt="...">
+    <img src="bts_group2.jpeg" class="card-img-top" alt="...">
     <div class="card-body">
       <h5 class="card-title">Official BTS Website</h5>
       <p class="card-text">Visit their offical webiste!</p>
@@ -154,7 +154,7 @@
   </div>
 
   <div class="card" style="width: 18rem;">
-    <img src="/bts_group3.jpeg" class="card-img-top" alt="...">
+    <img src="bts_group3.jpeg" class="card-img-top" alt="...">
     <div class="card-body">
       <h5 class="card-title">BTS Facebook</h5>
       <p class="card-text">Connect through their Facebook Page!</p>
@@ -163,7 +163,7 @@
   </div>
 
   <div class="card" style="width: 18rem;">
-    <img src="/bts_group4.jpeg" class="card-img-top" alt="...">
+    <img src="bts_group4.jpeg" class="card-img-top" alt="...">
     <div class="card-body">
       <h5 class="card-title">BTS Instagram</h5>
       <p class="card-text">View more pictures and stories on their Instagram!</p>
